--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".GameLauncherActivity"
             android:label="@string/title_activity_game_launcher" >
@@ -28,6 +27,10 @@
         <activity
             android:name=".GameActivity"
             android:label="@string/title_activity_game" >
+        </activity>
+        <activity
+            android:name=".CreateGameActivity"
+            android:label="@string/title_activity_create_game" >
         </activity>
     </application>
 
